--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   }
 }
 </script>
+<!-- Pyodide for running Python in browser -->
+<script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
 </head>
   <body class="bg-gray-100 dark:bg-gray-900">
     <div id="root"></div>
